--- a/index.html
+++ b/index.html
@@ -248,13 +248,13 @@
 <div id="YIFRS" class="tabcontent">
 <h2>YIFRS</h2>
 
-<button class="accordion">국내 회계감사 업계의 AI 기술 활용 현황과 한국공인회계사회의 역할</button>
-<div class="brief">국내 회계감사 업계의 AI 기술 도입은 아직 대형회계법인 위주로 초기 단계에 머물러 있어, 한국공인회계사회가 교육 프로그램과 가이드라인 마련, 맞춤형 지원 등을 통해 AI 감사 활성화에 주도적인 역할을 해야 한다는 필요성이 제기되고 있습니다.</div>
+<button class="accordion">AI 감사 시대, 피감사기업의 대응과 주요 고려사항</button>
+<div class="brief">회계법인의 AI 감사 도입으로 인해 기업은 전수조사에 가까운 정밀 감사를 받게 되며, 이에 따른 데이터 보안 문제에 대한 철저한 대비가 필요해졌습니다.</div>
 
 <div class="panel">
-  <p>최근 'AI혁신감사인증포럼'에서 논의된 바에 따르면, 국내 회계감사 분야의 AI 활용은 아직 초기 단계로 주로 대형회계법인에 국한되어 있으며, 대부분의 중견·중소회계법인은 비용, 데이터 접근성, 전문인력 부족 등의 문제로 어려움을 겪고 있습니다.</p>
-  <p>이러한 격차를 해소하고 AI 감사를 활성화하기 위해 한국공인회계사회는 실질적인 교육 프로그램과 윤리 가이드라인을 마련하고, AI 실무지원 헬프데스크 운영 및 공동 플랫폼 개발과 같은 맞춤형 지원을 제공해야 한다는 제안이 나왔습니다.</p>
-  <p>종합토론에서는 고객 데이터 보안 확보가 가장 시급한 과제로 꼽혔으며, AI 도구의 신뢰성을 위한 거버넌스 체계와 데이터 활용 지침, 나아가 장기적으로는 '한국형 소버린 AI' 개발의 필요성도 제시되었습니다.</p>
+  <p>회계법인들이 머신러닝 등 AI 기술을 감사에 적극 도입하면서, 과거의 표본 감사가 아닌 전체 거래를 분석하는 방식으로 감사의 깊이와 범위가 크게 확대되고 있습니다.</p>
+  <p>이에 따라 피감사기업은 감사인에게 더 광범위하고 민감한 데이터를 제공해야 하므로, 정보 유출 방지를 위한 상호 간의 명확한 보안 기준과 기술적 신뢰 확보가 최우선 과제로 떠올랐습니다.</p>
+  <p>또한, AI가 도출한 감사 결과의 신뢰성이나 잠재적 분쟁 가능성에 대비해야 하며, 특히 대형회계법인을 중심으로 AI 기술 도입이 활발하므로 거래하는 회계법인의 기술 수준에 따라 다른 방식의 감사에 대응할 필요가 있습니다.</p>
   <a href="https://www.kicpa.or.kr/portal/default/kicpa/gnb/kr_pc/menu05/menu03.page?action=READ&boardId=press&bltnNo=11754616199748" target="_blank">원문 보기</a>
 </div>
 </div>
